--- a/sadao/CLICA-AQUI.html
+++ b/sadao/CLICA-AQUI.html
@@ -19,6 +19,10 @@
 
 <body>
     <script>
+       if (window.innerHeight >=800||window.innerHeight <=500) {
+            window.alert('a bagaça pode dar merda a resolução é meio difeerenteeee')
+        }
+      
         function cred(){ window.alert('quiz: raphael, slides:vitor, capa dos slides:pedro')}
     </script>
     <script src="./javaScript/menu.js"></script>
